@@ -2,7 +2,8 @@
 
 	* src/av-cp/playlist-treeview.c:
 
-	Prefer to use the icon from the MediaServer to represent it.
+	- Prefer to use the icon from the MediaServer to represent it.
+	- Remove MediaServer from the treeview after it's unavailable.
 
 2007-11-04  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
 
